# emberbot

./: .gitignore  Cargo.toml  Procfile  README.md  chatbot.js  config.json  countryList.json  economy.db  ecosystem.config.js  embeds.js  eval.ts  guild-config.ts  heroku2discord-webhook.js  index.html  index.js  index.ts  interfaces.ts  markovchain.js  misc.json  mongo.js  obama.json  package-lock.json  package.json  page.html  procfile  server.js  stuff.ts  tags.json  tsconfig.json
.github/workflows/: codeql-analysis.yml
.history/: server_20210807101621.js  server_20210826152835.js
chatbot/: chatbot.js  chatbot.ts  data.json  neuralnet.json  train.js  train.ts
commands/: -handler.ts  antonym.js  antonymchain.js  code.ts  config.js  config.ts  convert.js  convert.ts  debug.ts  dn.js  dn.ts  esim.ts  europesim.ts  eval.js  eval.ts  exit.js  exit.ts  find.ts  handler.js  help.ts  hi.js  hi.ts  info.js  info.ts  mc.ts  minecraft.js  minecraft.ts  music.js  obama.js  pfp.js  pfp.ts  ping.js  ping.ts  poll.js  poll.ts  quote.js  quote.ts  random.js  rcg.js  rcg.ts  (+13 more)
modules/: basement.js  ben.js  ben.ts  bots-moe.js  bots-moe.ts  candy-van.js  chatbot.js  chatbot.ts  client.js  client.ts  command_handler.js  config.js  config.ts  discord_client.js  europesim.ts  interfaces.d.ts  interfaces.ts  logger.js  logger.ts  mcdata.js  misc.js  misc.ts  music-player.js  stdin.js  wordhippo.js
src/: avatar.rs  main.rs  snowflake.rs
stuff/: text2bf.ts
unrelated/: vote.js
unrelated/minecraft-server/: server.js
unrelated/mineflayer bots/: 2b2t.js  frozenmc.js
(+5 files in other folders)
