[package]
name = "emberbot"
version = "5.0.0-a.530"
edition = "2021"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.11.5"